New home, partner section, and company profile

--- a/index.html
+++ b/index.html
@@ -46,20 +46,38 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Who We Are<i class="fa fa-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="blog-item.html">Company Profile</a></li>
+                                <li><a href="pricing.html">Partners</a></li>
+                                <li><a href="404.html">Clients</a></li>
+                                <li><a href="shortcodes.html">Careers</a></li>
+                            </ul>
+                        </li>
+                         <li><a href="index.html">What We Do</a></li>
+
+                         <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solutions<i class="fa fa-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="blog-item.html">Enterprise Document/Content Management System</a></li>
+                                <li><a href="pricing.html">KBC Production Optimisation</a></li>
+                                <li><a href="404.html">Asset Management Solutions</a></li>
+                            </ul>
+                        </li>
 
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Capital Excellence</a></li>
-                                <li><a href="pricing.html">Operational Excellence</a></li>
-                                <li><a href="404.html">Risk & Safety Management</a></li>
-                                <li><a href="shortcodes.html">Enterprise Content Management</a></li>
+                                <li><a href="blog-item.html">Professional ICT Consultancy & Support Services</a></li>
+                                <li><a href="pricing.html">Asset Management Services</a></li>
+                                <li><a href="404.html">Safety, Risk & Resilliance Services</a></li>
                             </ul>
                         </li> 
-                        <li><a href="contact-us.html">Business Partners & Clients</a></li>
-                        <li><a href="contact-us.html">Career Opportunities</a></li>
-                        <li><a href="contact-us.html">Contact</a></li>                        
+
+                        <li><a href="contact-us.html">Success Stories</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
                 
@@ -199,24 +217,7 @@
 
 
 
-    <section id="partner">
-        <div class="container">
-            <div class="center wow fadeInDown">
-                <h2>Our Partners</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
-            </div>    
 
-            <div class="partners">
-                <ul class>
-                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/kbc_partner.png"></a></li>
-                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/edms_partner.png"></a></li>
-                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/penta_partner.png"></a></li>
-                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/bws_partner.png"></a></li>
-
-                </ul>
-            </div>        
-        </div><!--/.container-->
-    </section><!--/#partner-->
 
     <section id="conatcat-info">
         <div class="container">
