Careers, and background tweak to clients

--- a/about-us.html
+++ b/about-us.html
@@ -31,16 +31,17 @@
     <link href="../owl-carousel/owl.theme.css" rel="stylesheet">
 
 
-       <style>
-           #owl-demo .item{
-  margin: 3px;
-}
-#owl-demo .item img{
-  display: block;
-  width: 100%;
-  height: auto;
-}
-        </style>
+    <style>
+        #owl-demo .item {
+            margin: 3px;
+        }
+
+        #owl-demo .item img {
+            display: block;
+            width: 100%;
+            height: auto;
+        }
+    </style>
 
 </head>
 <!--/head-->
@@ -63,21 +64,21 @@
 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
 
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Who We Are<i class="fa fa-angle-down"></i></a>
+                        <li class="dropdown active">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Who We Are <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Company Profile</a></li>
-                                <li><a href="pricing.html">Partners</a></li>
-                                <li><a href="404.html">Clients</a></li>
-                                <li><a href="shortcodes.html">Careers</a></li>
+                                <li><a href="about-us.html">Company Profile</a></li>
+                                <li><a href="about-us.html#partner">Partners</a></li>
+                                <li><a href="about-us.html#clients">Clients</a></li>
+                                <li><a href="about-us.html#careers">Careers</a></li>
                             </ul>
                         </li>
                         <li><a href="index.html">What We Do</a></li>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solutions<i class="fa fa-angle-down"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solutions <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="blog-item.html">Enterprise Document/Content Management System</a></li>
                                 <li><a href="pricing.html">KBC Production Optimisation</a></li>
@@ -107,7 +108,7 @@
     <!--/header-->
 
     <section id="about-us">
-        <div class="container">
+        <div class="container center">
             <div>
                 <h1 class="center wow fadeInDown">Company Profile</h1>
                 <h2>About Us</h2>
@@ -211,17 +212,17 @@
                                 <div class="item">
                                     <img src="images/clients/petronas.png"></div>
                                 <div class="item">
-                                    <img src="images/clients/petrofac.jpg"></div>
+                                    <img src="images/clients/petrofac.png"></div>
                                 <div class="item">
                                     <img src="images/clients/malaysia%20airports.png"></div>
                                 <div class="item">
                                     <img src="images/clients/Canon-logo-2012.png"></div>
-                                 <div class="item">
+                                <div class="item">
                                     <img src="images/clients/klia-next-gen-hub-logo.png"></div>
-                                 <div class="item">
-                                    <img src="images/clients/indahkiat.jpg"></div>
-                                 <div class="item">
-                                    <img src="images/clients/JKR.jpg"></div>
+                                <div class="item">
+                                    <img src="images/clients/indahkiat.png"></div>
+                                <div class="item">
+                                    <img src="images/clients/JKR.png"></div>
 
                             </div>
 
@@ -230,11 +231,32 @@
                 </div>
 
             </div>
-
-
         </div>
     </section>
 
+        <section id="careers">
+        <div class="container center">
+            <div>
+                <h2 class="center wow fadeInDown">Careers</h2>
+                <p class="lead wow fadeInUp">At EDMS Consultants, we are committed to fostering personal and professional growth and advancement. Being part of the team at EDMS Consultants you get to:</p>
+<hr>
+                <p class="lead wow fadeInUp">Work with and learn from smart, focused people who are passionate about their work.</p>
+
+                <p class="lead wow fadeInUp">Work on challenging, interesting projects that have a huge impact on our success.</p>
+
+                <p class="lead wow fadeInUp">Work in a casual but accountable environment in which commitment, initiative, smart decision making and ability to deliver are rewarded.</p>
+
+                <p class="lead wow fadeInUp">Play an important part in our market growth by bringing new ideas to the table and launching new businesses.
+                </p>
+                <p class="lead wow fadeInUp">Travel extensively throughout the Asia Pacific region.
+                </p>
+                <p class="lead wow fadeInUp">Be rewarded with great career opportunities.</p>
+                <p class="lead wow fadeInUp">Have fun!</p>
+                <hr>
+                <p class="lead wow fadeInUp">If you are dynamic, motivated, result-oriented and highly capable, we welcome you to send in your cover letter and CV to deepav@edms-consultants.com </p>
+
+            </div>
+        </section>
     <section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="row">
@@ -303,7 +325,7 @@
                 <!--/.col-md-3-->
             </div>
         </div>
-
+        </section>
         <!--/#bottom-->
 
         <footer id="footer" class="midnight-blue">
