--- a/contact-us.html
+++ b/contact-us.html
@@ -29,34 +29,8 @@
 <body>
 
     <header id="header">
-        <div class="top-bar">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-xs-4">
-                        <div class="top-number"><p><i class="fa fa-phone-square"></i>  +0123 456 70 90</p></div>
-                    </div>
-                    <div class="col-sm-6 col-xs-8">
-                       <div class="social">
-                            <ul class="social-share">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                            </ul>
-                            <div class="search">
-                                <form role="form">
-                                    <input type="text" class="search-form" autocomplete="off" placeholder="Search">
-                                    <i class="fa fa-search"></i>
-                                </form>
-                           </div>
-                       </div>
-                    </div>
-                </div>
-            </div><!--/.container-->
-        </div><!--/.top-bar-->
 
-        <nav class="navbar navbar-inverse" role="banner">
+       <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -65,43 +39,63 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+
+                    <a class="navbar-brand" href="index.html"><img src="images/Logos/EUM2.png" alt="logo"></a>
                 </div>
-                
+
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
+
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down"></i></a>
+                            <a href="about-us.html" class="dropdown-toggle" data-toggle="dropdown">Who We Are <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Blog Single</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="404.html">404</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
+                                <li><a href="about-us.html">Company Profile</a></li>
+                                <li><a href="about-us.html#partner">Partners</a></li>
+                                <li><a href="about-us.html#clients">Clients</a></li>
+                                <li><a href="about-us.html#careers">Careers</a></li>
                             </ul>
                         </li>
-                        <li><a href="blog.html">Blog</a></li> 
-                        <li class="active"><a href="contact-us.html">Contact</a></li>                        
+                        <li><a href="What-we-do.html">What We Do</a></li>
+
+                        <li class="dropdown">
+                            <a href="solutions.html" class="dropdown-toggle" data-toggle="dropdown">Solutions <i class="fa fa-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="solutions.html">Enterprise Document/Content Management System</a></li>
+                                <li><a href="solutions.html#KBC">KBC Production Optimisation</a></li>
+                                <li><a href="solutions.html#ASM">Asset Management Solutions</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="dropdown">
+                            <a href="services.html" class="dropdown-toggle" data-toggle="dropdown">Services <i class="fa fa-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html">Professional ICT Consultancy & Support Services</a></li>
+                                <li><a href="services.html#AMS">Asset Management Services</a></li>
+                                <li><a href="services.html#SAFETY">Safety, Risk & Resilliance Services</a></li>
+                            </ul>
+                        </li>
+
+                        <li><a href="Success-stories.html">Success Stories</a></li>
+                        <li class="active"><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
-            </div><!--/.container-->
-        </nav><!--/nav-->
+
+            </div>
+            <!--/.container-->
+        </nav>
     </header><!--/header-->
 
     <section id="contact-info">
         <div class="center">                
-            <h2>How to Reach Us?</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            <h2>Contact Us</h2>
         </div>
         <div class="gmap-area">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-5 text-center">
                         <div class="gmap">
-                            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=JoomShaper,+Dhaka,+Dhaka+Division,+Bangladesh&amp;aq=0&amp;oq=joomshaper&amp;sll=37.0625,-95.677068&amp;sspn=42.766543,80.332031&amp;ie=UTF8&amp;hq=JoomShaper,&amp;hnear=Dhaka,+Dhaka+Division,+Bangladesh&amp;ll=23.73854,90.385504&amp;spn=0.001515,0.002452&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=1073661719450182870&amp;output=embed"></iframe>
+                            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d995.9854708746121!2d101.58703964207741!3d3.110079034324703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x1687000309748fa0!2sEDMS+Consultants+Sdn+Bhd!5e0!3m2!1sen!2sau!4v1437020652736" width="800" height="600"></iframe>
                         </div>
                     </div>
 
@@ -109,40 +103,16 @@
                         <ul class="row">
                             <li class="col-sm-6">
                                 <address>
-                                    <h5>Head Office</h5>
-                                    <p>1537 Flint Street <br>
-                                    Tumon, MP 96911</p>
-                                    <p>Phone:670-898-2847 <br>
-                                    Email Address:info@domain.com</p>
+                                    <h5>Energy & Utilities Management Sdn Bhd</h5>
+                                    <p>D-3-5, Pacific Place Commercial Center,<br>
+	Jalan PJU 1A/4, 47301 Petaling Jaya,<br>
+	Selangor, Malaysia
+</p>
+                                    <p>Phone: (603) 7451 5696 <br>
+                                        Fax: (603) 7451 5695 <br>
+                                    Email Address: info@edms-consultants.com</p>
                                 </address>
 
-                                <address>
-                                    <h5>Zonal Office</h5>
-                                    <p>1537 Flint Street <br>
-                                    Tumon, MP 96911</p>                                
-                                    <p>Phone:670-898-2847 <br>
-                                    Email Address:info@domain.com</p>
-                                </address>
-                            </li>
-
-
-                            <li class="col-sm-6">
-                                <address>
-                                    <h5>Zone#2 Office</h5>
-                                    <p>1537 Flint Street <br>
-                                    Tumon, MP 96911</p>
-                                    <p>Phone:670-898-2847 <br>
-                                    Email Address:info@domain.com</p>
-                                </address>
-
-                                <address>
-                                    <h5>Zone#3 Office</h5>
-                                    <p>1537 Flint Street <br>
-                                    Tumon, MP 96911</p>
-                                    <p>Phone:670-898-2847 <br>
-                                    Email Address:info@domain.com</p>
-                                </address>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -153,15 +123,18 @@
     <section id="contact-page">
         <div class="container">
             <div class="center">        
-                <h2>Drop Your Message</h2>
-                <p class="lead">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h2>Enquiry Form</h2>
             </div> 
             <div class="row contact-wrap"> 
                 <div class="status alert alert-success" style="display: none"></div>
                 <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="sendemail.php">
                     <div class="col-sm-5 col-sm-offset-1">
                         <div class="form-group">
-                            <label>Name *</label>
+                            <label>Company Name *</label>
+                            <input type="text" name="name" class="form-control" required="required">
+                        </div>
+                         <div class="form-group">
+                            <label>Contact Person *</label>
                             <input type="text" name="name" class="form-control" required="required">
                         </div>
                         <div class="form-group">
@@ -169,13 +142,17 @@
                             <input type="email" name="email" class="form-control" required="required">
                         </div>
                         <div class="form-group">
-                            <label>Phone</label>
+                            <label>Telephone</label>
                             <input type="number" class="form-control">
                         </div>
-                        <div class="form-group">
-                            <label>Company Name</label>
-                            <input type="text" class="form-control">
-                        </div>                        
+                         <div class="form-group">
+                            <label>Fax</label>
+                            <input type="number" class="form-control">
+                        </div>
+                         <div class="form-group">
+                            <label>Mobile</label>
+                            <input type="number" class="form-control">
+                        </div>
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
