--- a/about-us.html
+++ b/about-us.html
@@ -64,10 +64,10 @@
 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
+                        <li ><a href="index.html">Home</a></li>
 
                         <li class="dropdown active">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Who We Are <i class="fa fa-angle-down"></i></a>
+                            <a href="about-us.html" class="dropdown-toggle" data-toggle="dropdown">Who We Are <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="about-us.html">Company Profile</a></li>
                                 <li><a href="about-us.html#partner">Partners</a></li>
@@ -75,27 +75,27 @@
                                 <li><a href="about-us.html#careers">Careers</a></li>
                             </ul>
                         </li>
-                        <li><a href="index.html">What We Do</a></li>
+                        <li><a href="What-we-do.html">What We Do</a></li>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solutions <i class="fa fa-angle-down"></i></a>
+                            <a href="solutions.html" class="dropdown-toggle" data-toggle="dropdown">Solutions <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Enterprise Document/Content Management System</a></li>
-                                <li><a href="pricing.html">KBC Production Optimisation</a></li>
-                                <li><a href="404.html">Asset Management Solutions</a></li>
+                                <li><a href="solutions.html">Enterprise Document/Content Management System</a></li>
+                                <li><a href="solutions.html#KBC">KBC Production Optimisation</a></li>
+                                <li><a href="solutions.html#ASM">Asset Management Solutions</a></li>
                             </ul>
                         </li>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <i class="fa fa-angle-down"></i></a>
+                            <a href="services.html" class="dropdown-toggle" data-toggle="dropdown">Services <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Professional ICT Consultancy & Support Services</a></li>
-                                <li><a href="pricing.html">Asset Management Services</a></li>
-                                <li><a href="404.html">Safety, Risk & Resilliance Services</a></li>
+                                <li><a href="services.html">Professional ICT Consultancy & Support Services</a></li>
+                                <li><a href="services.html#AMS">Asset Management Services</a></li>
+                                <li><a href="services.html#SAFETY">Safety, Risk & Resilliance Services</a></li>
                             </ul>
                         </li>
 
-                        <li><a href="contact-us.html">Success Stories</a></li>
+                        <li><a href="Success-stories.html">Success Stories</a></li>
                         <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
