--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header id="header">
       
 
-        <nav class="navbar navbar-inverse" role="banner">
+       <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -48,7 +48,7 @@
                         <li class="active"><a href="index.html">Home</a></li>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Who We Are <i class="fa fa-angle-down"></i></a>
+                            <a href="about-us.html" class="dropdown-toggle" data-toggle="dropdown">Who We Are <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="about-us.html">Company Profile</a></li>
                                 <li><a href="about-us.html#partner">Partners</a></li>
@@ -56,27 +56,27 @@
                                 <li><a href="about-us.html#careers">Careers</a></li>
                             </ul>
                         </li>
-                        <li><a href="index.html">What We Do</a></li>
+                        <li><a href="What-we-do.html">What We Do</a></li>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solutions <i class="fa fa-angle-down"></i></a>
+                            <a href="solutions.html" class="dropdown-toggle" data-toggle="dropdown">Solutions <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Enterprise Document/Content Management System</a></li>
-                                <li><a href="pricing.html">KBC Production Optimisation</a></li>
-                                <li><a href="404.html">Asset Management Solutions</a></li>
+                                <li><a href="solutions.html">Enterprise Document/Content Management System</a></li>
+                                <li><a href="solutions.html#KBC">KBC Production Optimisation</a></li>
+                                <li><a href="solutions.html#ASM">Asset Management Solutions</a></li>
                             </ul>
                         </li>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <i class="fa fa-angle-down"></i></a>
+                            <a href="services.html" class="dropdown-toggle" data-toggle="dropdown">Services <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Professional ICT Consultancy & Support Services</a></li>
-                                <li><a href="pricing.html">Asset Management Services</a></li>
-                                <li><a href="404.html">Safety, Risk & Resilliance Services</a></li>
+                                <li><a href="services.html">Professional ICT Consultancy & Support Services</a></li>
+                                <li><a href="services.html#AMS">Asset Management Services</a></li>
+                                <li><a href="services.html#SAFETY">Safety, Risk & Resilliance Services</a></li>
                             </ul>
                         </li>
 
-                        <li><a href="contact-us.html">Success Stories</a></li>
+                        <li><a href="Success-stories.html">Success Stories</a></li>
                         <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -103,74 +103,19 @@
                                 <div class="carousel-content">
                                    <img src="images/Logos/eum_big.png" class="animation animated-item-1">
                                     <h1 class="animation animated-item-2">Delivering business performance improvement solutions</h1>
-                                    <a class="btn-slide animation animated-item-3" href="#">Read More</a>
+                                    <a class="btn-slide animation animated-item-3" href="/about-us.html#about-us">Read More</a>
                                 </div>
                             </div>
-
-                           <!-- <div class="col-sm-6 hidden-xs animation animated-item-4">
-                                <div class="slider-img">
-                                    <img src="images/slider/img1.png" class="img-responsive">
-                                </div>
-                            </div>-->
-
                         </div>
                     </div>
                 </div><!--/.item-->
-
-              <!--  <div class="item" style="background-image: url(images/slider/bg2.jpg)">
-                    <div class="container">
-                        <div class="row slide-margin">
-                            <div class="col-sm-6">
-                                <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                    <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
-                                    <a class="btn-slide animation animated-item-3" href="#">Read More</a>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-6 hidden-xs animation animated-item-4">
-                                <div class="slider-img">
-                                    <img src="images/slider/img2.png" class="img-responsive">
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>--><!--/.item-->
-
-              <!--  <div class="item" style="background-image: url(images/slider/bg3.jpg)">
-                    <div class="container">
-                        <div class="row slide-margin">
-                            <div class="col-sm-6">
-                                <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                    <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
-                                    <a class="btn-slide animation animated-item-3" href="#">Read More</a>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 hidden-xs animation animated-item-4">
-                                <div class="slider-img">
-                                    <img src="images/slider/img3.png" class="img-responsive">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>--><!--/.item-->
-            <!--</div><!--/.carousel-inner-->
         </div><!--/.carousel-->
-       <!-- <a class="prev hidden-xs" href="#main-slider" data-slide="prev">
-            <i class="fa fa-chevron-left"></i>
-        </a>
-        <a class="next hidden-xs" href="#main-slider" data-slide="next">
-            <i class="fa fa-chevron-right"></i>
-        </a>-->
     </section><!--/#main-slider-->
 
     <section id="middle" class="service-item">
 	   <div class="container">
             <div class="center wow fadeInDown">
                 <h2>Our Services</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
 
             <div class="row text-center">
@@ -218,25 +163,6 @@
 
 
 
-
-
-    <section id="conatcat-info">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8">
-                    <div class="media contact-info wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                        <div class="pull-left">
-                            <i class="fa fa-phone"></i>
-                        </div>
-                        <div class="media-body">
-                            <h2>Have a question or need a custom quote?</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation +0123 456 70 80</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div><!--/.container-->    
-    </section><!--/#conatcat-info-->
 
     <section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
