--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                         <li class="dropdown">
                             <a href="about-us.html" class="dropdown-toggle" data-toggle="dropdown">Who We Are <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
+                                <ul class="dropdown-menu">
                                 <li><a href="about-us.html">Company Profile</a></li>
-                                <li><a href="about-us.html#partner">Partners</a></li>
-                                <li><a href="about-us.html#clients">Clients</a></li>
-                                <li><a href="about-us.html#careers">Careers</a></li>
+                                <li><a href="careers.html">Careers</a></li>
+                            </ul>
                             </ul>
                         </li>
                         <li><a href="What-we-do.html">What We Do</a></li>
