--- a/about-us.html
+++ b/about-us.html
@@ -91,10 +91,16 @@
     </header>
     <!--/header-->
 
+    <section id="about_title">
+       <div class="center">
+            <h1 class="center wow fadeInDown">Company Profile</h1>
+        </div>
+    </section>
+
     <section id="about_us">
-        <div class="container center">
-            <div>
-                <h1 class="center wow fadeInDown">Company Profile</h1>
+     <div class="center">
+            <div class="container">
+                
                 <h2>About Us</h2>
                 <p class="lead wow fadeInUp">Energy & Utility Management has many years of experience in comprehensive document management solution and services. We are also specialized in providing risk and content lifecycle management solutions and services. At EUM, our business goal is to become specialist technology provider that creates sustainable business for our clients.</p>
 
@@ -119,8 +125,8 @@
                 <p class="lead wow fadeInUp">• By upholding the core values, we value the relationships with our clients, partners and stakeholders.</p>
 
             </div>
+            </div>
     </section>
-
 
     <section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
