--- a/services.html
+++ b/services.html
@@ -153,7 +153,8 @@
     <!--/#feature-->
 
     <section id="AMS">
-        <div class="container">
+        <div class="container truncate">
+            
             <div class="center">
                 <h1>Asset Management Services</h1>
             </div>
@@ -465,6 +466,7 @@ Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">
     <script src="js/jquery.isotope.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/truncate.js"></script>
 </body>
 
 </html>
