--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 
     <style>
-        body {
-            padding-top: 20px;
-        }
+       
 
         .client-carousel {
             margin-bottom: 0;
@@ -480,6 +478,7 @@ Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">
             })
         });
     </script>
+    <script src="js/SmoothScroll.js"></script>
 </body>
 
 </html>
